PostGIS 1.1.1CVS

	- Source code cleanups
	- Solaris 2.7 and MingW support improvements
	- added NumInteriorRing() alias due to OpenGIS ambiguity
	- BUGFIX in geometrycollection handling of GEOS-CAPI connector
	- BUGFIX in line_locate_point()
	- Fixed handling of postgresql paths
	- Fixed a premature exit in postgis_restore.pl 
	- Fixed memory bug in line_substring()
	- Added support for localized cluster in regress tester

PostGIS 1.1.0
2005/12/21

	- New functions:
		- scale() and transscale() companion methods to translate()
		- line_substring() 
		- line_locate_point()
		- M(point) 
		- LineMerge(geometry) 
		- shift_longitude(geometry) 
		- azimuth(geometry) 
		- locate_along_measure(geometry, float8) 
		- locate_between_measures(geometry, float8, float8) 
		- SnapToGrid by point offset (up to 4d support)
		- BuildArea(any_geometry) 
		- OGC BdPolyFromText(linestring_wkt, srid) 
		- OGC BdMPolyFromText(linestring_wkt, srid)
		- RemovePoint(linestring, offset)
		- ReplacePoint(linestring, offset, point)

	- Bug fixes:
		- Fixed memory leak in polygonize()
		- Fixed bug in lwgeom_as_anytype cast funcions
		- Fixed USE_GEOS, USE_PROJ and USE_STATS elements
		  of postgis_version() output to always reflect
		  library state.

	- Function semantic changes:
		- SnapToGrid doesn't discard higher dimensions
		- Changed Z() function to return NULL if requested
	  	  dimension is not available

	- Peformance improvements:
		- Much faster transform() function, caching proj4 objects
		- Removed automatic call to fix_geometry_columns() in
	  	  AddGeometryColumns() and update_geometry_stats()

	- jdbc2 works:
		- Makefile improvements
		- JTS support improvements
		- Improved regression test system
		- Basic consistency check method for geometry collections
		- Support for (Hex)(E)wkb
		- Autoprobing DriverWrapper for HexWKB / EWKT switching
		- fix compile problems in ValueSetter for ancient jdk releases.
		- fix EWKT constructors to accept SRID=4711; representation